feat: use non-deprecated api