@@ -63,7 +63,7 @@ public class ExecuteJavaTask extends Task {
                         if (Modifier.isStatic(method.getModifiers())) {
                             result = method.invoke(null, new Object[] {param});
                         } else if (Modifier.isPublic(method.getModifiers())) {
-                            Object classInstance = calledClass.newInstance();
+                            Object classInstance = calledClass.getConstructor().newInstance();
                             result = method.invoke(classInstance, new Object[] {param});
                         }
                         if (result != null) {
